SERVER-12513 If a 2.4-style index on admin.system.users is detected, remove it